2025-06-11 / footer 내용 추가

--- a/pet/src/main/resources/templates/layout/footer.html
+++ b/pet/src/main/resources/templates/layout/footer.html
@@ -1,3 +1,12 @@
 <div class="footer" th:fragment="footer" xmlns:th="http://www.w3.org/1999/xhtml">
-    <span></span>
+    <div class="footer-wrap">
+        <div class="f-logo">
+            <span>PAW WALK</span>
+        </div>
+        <div class="f-info">
+            <p>Developed by 정처산기4조</p>
+            <p>Contact: msc0101312@gmail.com</p>
+            <p>GitHub: <a href="https://github.com/msc010312/petproject">https://github.com/msc010312/petproject</a></p>
+        </div>
+    </div>
 </div>
