--- a/pet/src/main/resources/static/css/footer.css
+++ b/pet/src/main/resources/static/css/footer.css
@@ -3,3 +3,51 @@
     height: 100px;
     border-top: 1px solid #333;
 }
+
+.footer-wrap {
+    position: relative;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    height: 100%;
+    background: #333;
+    color: #fff;
+    padding: 20px 50px 20px 0;
+    gap: 40px;
+}
+
+.f-logo {
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.f-info {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    font-size: 1.2rem;
+}
+
+.f-info>p>a {
+    position: relative;
+    color: #fff;
+    transition: all 0.3s;
+}
+
+.f-info>p>a::before {
+    content: '';
+    position: absolute;
+    display: none;
+    width: 100%;
+    height: 1px;
+    background: #fff;
+    bottom: 0;
+    left: 121%;
+}
+
+.f-info>p>a:hover::before {
+    display: block;
+    left:0;
+    transition: ease-in 0.3s;
+}
