--- a/pet/src/main/resources/static/css/ownerpage.css
+++ b/pet/src/main/resources/static/css/ownerpage.css
@@ -574,9 +574,9 @@ button {
 .reserve .allres {
     display: flex;
     margin-top: 20px;
-    margin-left: 39.5%;
     margin-bottom: 10px;
     gap: 10px;
+    justify-content: center;
 }
 
 .allres button {
@@ -819,6 +819,7 @@ button {
   align-items: center;
   margin-top: 10px;
   gap: 10px;
+  padding-left: 10px
 }
 
 .pro-card img {
@@ -834,7 +835,7 @@ button {
 }
 
 .pro-card button {
-  margin-left: auto;
+  margin-left: 350px;
   background-color: #f44;
   color: white;
   border: none;
