--- a/pet/src/main/resources/templates/mypage/ownerpage.html
+++ b/pet/src/main/resources/templates/mypage/ownerpage.html
@@ -143,12 +143,12 @@
                     <span th:text="'날짜 : ' + ${res.date}"></span>
                 </div>
             </div>
-            <div class="chat1">
-                <!-- 모달 버튼 -->
+            <!--<div class="chat1">
+                &lt;!&ndash; 모달 버튼 &ndash;&gt;
                 <button class="openChatBtn" data-sitter="sitter3">
                     채팅
                 </button>
-            </div>
+            </div>-->
         </div>
     </div>
 
