--- a/pet/src/main/resources/templates/mypage/sitterpage.html
+++ b/pet/src/main/resources/templates/mypage/sitterpage.html
@@ -70,23 +70,25 @@
                 <li>현재 진행 중이거나 예정된 예약 내역입니다.</li>
             </ul>
         </div>
-        <div th:each="reserve:${ongoingReservations}" th:if="${reserve.sitter == sitter}">
-            <div class="res-card">
-                <ul>
-                    <li class="type" th:text="${reserve.serviceType}"></li>
-                    <li class="status" th:text="${reserve.status}"></li>
-                </ul>
-                <div class="schedule">
-                    <span class="material-symbols-outlined" style="font-size: 15px">calendar_today</span>
-                    <span th:text="${reserve.date}"></span>
-                </div>
-                <div class="pet"><img th:src="@{/asset/cat.jpg}" alt="반려동물 이미지"></div>
-                <div class="na" th:each="pet : ${pet}" th:text="'이름 : ' + ${pet.petName}"></div>
-                <div class="price" th:text="'케어비용 : ' + ${reserve.payment}"></div>
-                <div class="noti" th:text="'요청사항 : ' + ${reserve.request}"></div>
-                <div class="actions">
-                    <button class="openChatBtn">채팅</button>
-                    <button class="modal-btn" data-type="view1">상세보기</button>
+        <div class="reseach">
+            <div th:each="reserve:${ongoingReservations}" th:if="${reserve.sitter == sitter}">
+                <div class="res-card">
+                    <ul>
+                        <li class="type" th:text="${reserve.serviceType}"></li>
+                        <li class="status" th:text="${reserve.status}"></li>
+                    </ul>
+                    <div class="schedule">
+                        <span class="material-symbols-outlined" style="font-size: 15px">calendar_today</span>
+                        <span th:text="${reserve.date}"></span>
+                    </div>
+                    <div class="pet"><img th:src="@{/asset/cat.jpg}" alt="반려동물 이미지"></div>
+                    <div class="na" th:each="pet : ${pet}" th:text="'이름 : ' + ${pet.petName}"></div>
+                    <div class="price" th:text="'케어비용 : ' + ${reserve.payment}"></div>
+                    <div class="noti" th:text="'요청사항 : ' + ${reserve.request}"></div>
+                    <div class="actions">
+                        <button class="openChatBtn">채팅</button>
+                        <button class="modal-btn" data-type="view1">상세보기</button>
+                    </div>
                 </div>
             </div>
         </div>
