메인페이지 사진 수정

--- a/pet/src/main/resources/templates/mainPage/main.html
+++ b/pet/src/main/resources/templates/mainPage/main.html
@@ -28,7 +28,7 @@
     <div class="swiper slide" id="slideSection">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="../../asset/강아지2.jpg" alt="슬라이드1"/>
+                <img src="../../asset/배경화면.jpg" alt="슬라이드1"/>
                 <div class="slide-text">
                     <h4>우리 아이를 위한 하루의 시작</h4>
                     <p>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <img src="../../asset/산책.jpg" alt="슬라이드2"/>
+                <img src="../../asset/배경화면2.jpg" alt="슬라이드2"/>
                 <div class="slide-text">
                     <h4>언제 어디서든 안심하고 맡기세요</h4>
                     <p>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <img src="../../asset/산책2.jpg" alt="슬라이드3"/>
+                <img src="../../asset/배경화면3.jpg" alt="슬라이드3"/>
                 <div class="slide-text">
                     <h4>함께하지 못하는 시간, 걱정 대신 신뢰로</h4>
                     <p>
