--- a/pet/src/main/resources/templates/layout/loginForm.html
+++ b/pet/src/main/resources/templates/layout/loginForm.html
@@ -19,9 +19,9 @@
             <p style="color:red;" th:text="${loginErrorMessage}"></p>
         </div>
         <input class="btn" id="loginBtn" type="submit" value="login">
-        <div class="fg_pw">
-            <a th:href="@{/findpw}">Forgot your password?</a>
-        </div>
+<!--        <div class="fg_pw">-->
+<!--            <a th:href="@{/findpw}">Forgot your password?</a>-->
+<!--        </div>-->
         <div class="signup_link">
             Not a member?
             <a th:href="@{/signup}">Sign Up</a>
